# IDS2-proyecto-final

./: README.md  compose.yml  package-lock.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
backend/MinIO/: test_usuarios.py
backend/app/: exceptions.py  main.py
backend/app/adapters/: curricular_sys.py
backend/app/api/: access.py  auth.py  cases.py  deps.py  dev.py  documents.py  notifications.py  reports.py  students.py
backend/app/core/: config.py  security.py
backend/app/crud/: cases.py  curricular.py  documents.py  user.py
backend/app/database/: database.py  db.py  minio_client.py  models.py
backend/app/schemas/: cases.py  test.py  token.py  user.py
backend/db/migrations/: 001_initial_schema.sql
backend/db/seeds/: seeds.py  test_data.sql
backend/templates/: reporte_caso.html  reporte_estudiante.html
backend/tests/: conftest.py  test_cases.py
backend/tests/api/: test_cases.py  test_get_caso_by_id.py  test_modificar_cases.py  test_students.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx
frontend/src/data/: mockCases.js  mockIncidents.js
frontend/src/hooks/: useCases.js  useIncidents.js  useStudents.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: CaseDetailPage.jsx  CasesPage.jsx  CreateCasePage.jsx  CreateHitoPage.jsx  IncidentsPage.jsx  LoginPage.jsx  ReportIncidentPage.jsx  StudentProfilePage.jsx  (+1 more)
minio-init/: politica-coordinador.json  politica-productor.json  politica-profesor-jefe.json
(+29 files in other folders)
